fixing icon/title spacing

--- a/style/desktop.css
+++ b/style/desktop.css
@@ -43,7 +43,7 @@ div.record {
 }
 
 #example1 {
-    background: url(../images/desktop_1024.png);
+    background: url(../images/desktop.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
